@@ -434,7 +434,7 @@ int Fast_pathfinder_client::is_grabable
 	{
 	if (from.distance(to) <= 1)
 		return 1;		// Already okay.
-	Fast_pathfinder_client client(MAX_GRAB_DIST, 
+	Fast_pathfinder_client client(MAX_GRAB_DIST,
 	   Game_window::get_instance()->get_main_actor()->get_type_flags());
 	Astar path;
 	return path.NewPath(from, to, &client);
